--- a/styles/style.css
+++ b/styles/style.css
@@ -130,3 +130,13 @@ color: gray;
 /* Responsive design style */
 
    
+@media (max-width:700px) {
+    .banner{
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-items: center;
+    }
+    .left-banner{
+        font-size:15px;
+        }
+}
